force-app/main/default/objects/leaseworks__Custom_Lookup__c/leaseworks__Custom_Lookup__c.object-meta.xml
<CustomObject>
    <label>Custom Lookup</label>
    <nameField>
        <label>Custom Lookup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Lookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>