force-app/main/default/objects/leaseworks__Custom_Lookup__c/fields/leaseworks__Engine_Thrust_Id__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Thrust_Id__c</fullName>
    <label>Engine Thrust Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>