force-app/main/default/objects/leaseworks__Custom_Lookup__c/fields/leaseworks__Order__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Order__c</fullName>
    <label>Order</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>