force-app/main/default/objects/leaseworks__Custom_Lookup__c/fields/leaseworks__Sub_LookupType2__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Sub_LookupType2__c</fullName>
    <label>Sub LookupType2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>