force-app/main/default/objects/leaseworks__Custom_Lookup__c/fields/leaseworks__Y_Hidden_Final_Name__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Final_Name__c</fullName>
    <formula>if(isblank( leaseworks__Short_Name__c ),Name,leaseworks__Short_Name__c)</formula>
    <label>_Final Name</label>
    <type>Text</type>
</CustomField>