force-app/main/default/objects/leaseworks__Custom_Lookup__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Lookup_Type__c</columns>
    <columns>leaseworks__Sub_LookupType__c</columns>
    <columns>leaseworks__Sub_LookupType2__c</columns>
    <columns>leaseworks__Description__c</columns>
    <columns>leaseworks__Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>