force-app/main/default/objects/leaseworks__Custom_Lookup__c/listViews/leaseworks__DealAutomationListView.listView-meta.xml
<ListView>
    <fullName>leaseworks__DealAutomationListView</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Lookup_Type__c</columns>
    <columns>leaseworks__Sub_LookupType__c</columns>
    <columns>leaseworks__Source__c</columns>
    <columns>leaseworks__Target__c</columns>
    <columns>leaseworks__Active__c</columns>
    <columns>leaseworks__Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>leaseworks__Lookup_Type__c</field>
        <operation>equals</operation>
        <value>CONVERT_DEALS_TO_LEASES</value>
    </filters>
    <label>DealAutomationListView</label>
</ListView>