force-app/main/default/objects/leaseworks__Custom_Lookup__c/listViews/leaseworks__Risk_Asset_Lookup_View.listView-meta.xml
<ListView>
    <fullName>leaseworks__Risk_Asset_Lookup_View</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Description__c</columns>
    <columns>leaseworks__Details__c</columns>
    <columns>leaseworks__Lookup_Type__c</columns>
    <columns>leaseworks__Sub_LookupType__c</columns>
    <columns>leaseworks__Sub_LookupType2__c</columns>
    <columns>leaseworks__Sub_LookupType3__c</columns>
    <columns>leaseworks__Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>leaseworks__Lookup_Type__c</field>
        <operation>equals</operation>
        <value>ASSET_SCORECARD</value>
    </filters>
    <label>Risk Asset  Lookup View</label>
</ListView>